styled nav using flexbox

--- a/index.html
+++ b/index.html
@@ -6,8 +6,18 @@
     <title>flexbox-intro</title><link rel="stylesheet" href="main.css">
 </head>
 <body>
-    
-<h1>Hey, here's some stuff</h1>
+    <header>
+        <nav class="navigation">
+            <h1 class="logo"><a href="#">Not Food</a></a></h1>
+
+            <ul>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./cats.html">Cats</a></li>
+                <li><a href="./dogs.html">Dogs</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <script src="main.js"></script>
 </body>
 </html>
