added puppies  to dogs page

--- a/cats.html
+++ b/cats.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>flexbox-intro</title><link rel="stylesheet" href="main.css">
+    <title>flexbox-intro | Cats</title><link rel="stylesheet" href="main.css">
 </head>
 <body>
     <header>
@@ -19,13 +19,12 @@
     </header>
 
     <main>
-        <h1>Home Page for Not Food</h1>
+        <h1>Cats</h1>
     </main>
 
     <footer>
         @2020 by me
     </footer>
-
     <script src="main.js"></script>
 </body>
 </html>
