--- a/dogs.html
+++ b/dogs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>flexbox-intro</title><link rel="stylesheet" href="main.css">
+    <title>flexbox-intro | Dogs</title><link rel="stylesheet" href="main.css">
 </head>
 <body>
     <header>
@@ -19,7 +19,15 @@
     </header>
 
     <main>
-        <h1>Home Page for Not Food</h1>
+        <h1>Dogs</h1>
+
+
+        <div class="dogs">
+            <img src="https://pbs.twimg.com/profile_images/446566229210181632/2IeTff-V.jpeg" alt="">
+      <img src="https://pbs.twimg.com/profile_images/446566229210181632/2IeTff-V.jpeg" alt="">
+      <img src="https://pbs.twimg.com/profile_images/446566229210181632/2IeTff-V.jpeg" alt="">
+      <img src="https://pbs.twimg.com/profile_images/446566229210181632/2IeTff-V.jpeg" alt="">
+        </div>
     </main>
 
     <footer>
