--- a/cats.html
+++ b/cats.html
@@ -1,30 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>flexbox-intro | Cats</title><link rel="stylesheet" href="main.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>flexbox-intro | Cats</title>
+    <link rel="stylesheet" href="main.css" />
+  </head>
+  <body>
     <header>
-        <nav class="navigation">
-            <h1 class="logo"><a href="#">Not Food</a></a></h1>
+      <nav class="navigation">
+        <h1 class="logo"><a href="#">Not Food</a></h1>
 
-            <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./cats.html">Cats</a></li>
-                <li><a href="./dogs.html">Dogs</a></li>
-            </ul>
-        </nav>
+        <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./cats.html">Cats</a></li>
+          <li><a href="./dogs.html">Dogs</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main>
-        <h1>Cats</h1>
+      <h1>Cats</h1>
+
+      <div class="cats">
+        
+        <img
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQ9kcM8UJPL0ewxgTUDjEjX-8jDRrGrtfWNdA&usqp=CAU"
+          alt=""
+        />
+        <img
+          src="https://cdn.cnn.com/cnn/interactive/2019/09/style/cat-photographer-cnnphotos/media/13.jpg"
+          alt=""
+        />
+        <img
+          src="https://simplycatbreeds.org/images/Snuggly_Kittens.jpg"
+          alt=""
+        />
+      </div>
     </main>
 
     <footer>
-        @2020 by me
+      @2020 by me
     </footer>
     <script src="main.js"></script>
-</body>
+  </body>
 </html>
