--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <nav class="navigation">
-            <h1 class="logo"><a href="#">Not Food</a></a></h1>
+            <h1 class="logo"><a href="#">NOT FOOD</a></a></h1>
 
             <ul>
                 <li><a href="./index.html">Home</a></li>
